Added sentence about class

--- a/bsemelroth.html
+++ b/bsemelroth.html
@@ -7,5 +7,6 @@
 <body>
 Hello world!
 Brody Semelroth
+This class is great so far, I love learning about new material under the guidance of the awesome Michael Colbert
 </body>
 </html>
