Added another Hello World!

--- a/bsemelroth.html
+++ b/bsemelroth.html
@@ -5,7 +5,7 @@
 <title> Git Test Page </title>
 </head>
 <body>
-Hello world!
+Hello world! Hello World!
 Brody Semelroth
 This class is great so far, I love learning about new material under the guidance of the awesome Michael Colbert
 </body>
