Font set and hyperlink added

--- a/bsemelroth.html
+++ b/bsemelroth.html
@@ -9,5 +9,6 @@
 Hello world! Hello World!
 Brody Semelroth
 This class is great so far, I love learning about new material under the guidance of the awesome Michael Colbert
+<a href="http://www.google.com"> Google </a>
 </body>
 </html>
