--- a/bsemelroth.html
+++ b/bsemelroth.html
@@ -4,6 +4,7 @@
 <meta charset=“utf-8”>
 <title> Git Test Page </title>
 <link rel="stylesheet" type="text/css" href="style.css" />
+<h1> BAIS:3300 – Software Design </h1>
 </head>
 <body>
 Hello world! Hello World!
